feat: 新增AI动作生成功能，支持根据首尾帧自动生成动作描述，并增强编辑弹框的交互体验

--- a/docs/动作提示词参考.md
+++ b/docs/动作提示词参考.md
@@ -13,4 +13,4 @@
 
 镜头 1:天台左侧中景，郑一剑初始站立 画面内容:郑一剑全身处于中景，站在天台左侧背后是夜色笼罩下灯火闪烁的城市，圆月高悬，光线清冷。他保持着一种蓄势待发的静态站立姿态，周身氛围沉静。运镜:采用固定镜头:稳稳聚焦郑一剑，清晰展现他的初始状态与周边环境，为后续动作爆发铺垫。镜头2:郑一剑消失:“模糊拖影”特效与空气扰动画面内容:画面瞬间触发“模糊拖影”特效，剑的身影如被快速拉扯的幻影般，以极郑-快的速度淡化、消失，原地只残留极其轻微的空气扰动波纹，仿佛有能量急速穿梭后留下的痕迹。运镜:镜头先短暂、轻微地跟随郑一剑消失前的动态趋势，随后立刻固定，着重突出消失瞬间的特效以及那丝若有似无的空气扰动，强化神秘感与速度感。 镜头3:镜头急速移至曲飞面前 画面内容:镜头从郑一剑消失的位置，以迅猛的速度(如同电影里追逐战或瞬移时的超快运镜)横向移动，画面里天台的栏杆、地面等景物飞速掠过，产生强烈的动态模糊效果。最终镜头定格在曲飞面前，此时曲飞位于画面右侧，脸上露出明显的惊讶与警惕正看向镜头移动而来的方向。运镜:运用急速横移镜头，模拟郑一剑快速移动的轨迹，极大地增强速度感与视觉冲击力，，让观众仿佛能感受到那股迅猛的势头。镜头 4:郑一剑突然出现，准备出拳 画面内容:郑一剑毫无征兆地出现在画面中央(曲飞的正前方)身体大幅度前倾，呈现出极具张力的准备出拳姿势，右手紧紧握拳，手霄肌肉线条因发力而紧绷带起的劲风使得他的衣角大幅度向后飘动，力量感与动感瞬间拉满。运镜:镜头在抵达迅速调整焦距与角度精准聚焦于刚出现的郑一剑，清晰捕捉他准备出拳的炫酷曲飞面前后，姿态，营造出如同电影大片般的震撼效果。
 
-视频前段镜头在倾盆大雨中快速抖动向前推进，对准在黑暗海平面中屹立不动的黑影。几道闪电快速划过他们的轮廓在雨幕中若隐若现。突然，一股巨大的雷暴能量在他身后快速汇聚，光芒猛烈爆发。镜头立刻快速向地面猛冲，并同时向上极度仰起，锁定他被能量光芒完全8#亮的、张开双臂的威严姿态。视频后段镜头在倾盆大雨快速抖动缓慢后退，对准两个在黑暗中屹立不动的黑影。几道闪电快速划过，使他的轮廓在雨幕中若隐若现。突然一股巨大的绿色能量人物从镜头前冲出围绕至人物身旁在他身后逐渐汇
+视频前段镜头在倾盆大雨中快速抖动向前推进，对准在黑暗海平面中屹立不动的黑影。几道闪电快速划过他们的轮廓在雨幕中若隐若现。突然，一股巨大的雷暴能量在他身后快速汇聚，光芒猛烈爆发。镜头立刻快速向地面猛冲，并同时向上极度仰起，锁定他被能量光芒完全亮的、张开双臂的威严姿态。视频后段镜头在倾盆大雨快速抖动缓慢后退，对准两个在黑暗中屹立不动的黑影。几道闪电快速划过，使他的轮廓在雨幕中若隐若现。突然一股巨大的绿色能量人物从镜头前冲出围绕至人物身旁在他身后逐渐汇
